Change/Fix: sub title font, size / not centered in small versions

--- a/docs/styles/ui.css
+++ b/docs/styles/ui.css
@@ -19,8 +19,8 @@ div.container {
 }
 
 .sub-title {
-  font-family: 'Passion One', normal;
-  font-size: 2.5em;
+  font-family: 'Didact Gothic', sans-serif;
+  font-size: 3.5em;
 }
 
 .img-emoji {
